--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "qrcode": "^1.5.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
