--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2"
   },
