--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^4.2.1",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
