--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "qrcode": "^1.5.1",
