--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,10 +26,12 @@
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "qrcode": "^1.5.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "solc": "^0.8.19"
   }
 }
