--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
