--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@progress/kendo-drawing": "^1.17.5",
+    "@progress/kendo-licensing": "^1.3.0",
+    "@progress/kendo-react-pdf": "^5.12.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
